[Google][Maps] Updated to version 2.7.0

--- a/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/GoogleMapsAdvSample.csproj
+++ b/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/GoogleMapsAdvSample.csproj
@@ -152,5 +152,8 @@
       <Name>Google.Maps</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <InterfaceDefinition Include="LaunchScreen.storyboard" />
+  </ItemGroup>
   <Import Project="..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
 </Project>
