--- a/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/Info.plist
+++ b/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/Info.plist
@@ -19,5 +19,7 @@
 	<string>com.xamarin.google.mapsadvsample</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>We just want to let you know where you are! :)</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
