--- a/Google.Maps/samples/GoogleMapsSample/GoogleMapsSample/Info.plist
+++ b/Google.Maps/samples/GoogleMapsSample/GoogleMapsSample/Info.plist
@@ -31,5 +31,7 @@
 	<string>com.xamarin.google.mapssample</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Trying to locate Xamarin HQ</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
