--- a/Firebase.MLKit/nuget/Xamarin.Firebase.iOS.MLKit.nuspec
+++ b/Firebase.MLKit/nuget/Xamarin.Firebase.iOS.MLKit.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Xamarin.Firebase.iOS.MLKit</id>
     <title>Firebase APIs MLKit iOS Library</title>
-    <version>0.13.0.0</version>
+    <version>0.13.0.1</version>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -15,7 +15,7 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.11" />
-        <dependency id="Xamarin.Firebase.MLKit.Common" version="0.13.0.0" />
+        <dependency id="Xamarin.Firebase.iOS.MLKit.Common" version="0.13.0.0" />
         <dependency id="Xamarin.Firebase.iOS.Core" version="5.1.8.0" />
       </group>
     </dependencies>
