--- a/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.csproj
+++ b/Google.MobileAds/source/Google.MobileAds/Google.MobileAds.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loader.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="GoogleMobileAds.linkwith.cs" />
   </ItemGroup>
   <ItemGroup>
     <ObjcBindingApiDefinition Include="ApiDefinition.cs" />
