[Firebase][InstanceID] Updated to version v3.8.0 * Now, the source, it's open source * Now it's a dynamic framework

--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -22,6 +22,10 @@ platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
 use_frameworks!
 
+=begin
+This override the static_framework flag to false,
+in order to be able to build dynamic frameworks.
+=end
 pre_install do |installer|
 	installer.pod_targets.each do |pod|
 		def pod.static_framework?;
