[Firebase][Analytics] Updated to version v5.8.0

--- a/Firebase.InstanceID/externals/Podfile
+++ b/Firebase.InstanceID/externals/Podfile
@@ -8,7 +8,7 @@ Check if main version or subversion number has changed.
 If yes, please, update *.targets file located in binding 
 project, also, update Podfile file if needed.
 
-In Firebase.InstanceID binding project, you can find the .targets file of:
+In Firebase.InstanceID binding project, you can find the Native Reference of:
 * FirebaseInstanceID (3.8.0)
 
 In Firebase.Core binding project, you can find the Native Reference of:
