--- a/Firebase.AdMob/externals/Podfile
+++ b/Firebase.AdMob/externals/Podfile
@@ -1,12 +1,12 @@
 =begin
 Last run Firebase/AdMob installed:
-* Firebase (5.16.0)
-* FirebaseAnalytics (5.5.0)
-* FirebaseCore (5.2.0)
-* FirebaseInstanceID (3.4.0)
-* Google-Mobile-Ads-SDK (7.38.0)
-* GoogleAppMeasurement (5.5.0)
-* GoogleUtilities (5.3.7)
+* Firebase (5.19.0)
+* FirebaseAnalytics (5.8.0)
+* FirebaseCore (5.4.0)
+* FirebaseInstanceID (3.8.0)
+* Google-Mobile-Ads-SDK (7.41.0)
+* GoogleAppMeasurement (5.8.0)
+* GoogleUtilities (5.5.0)
 * nanopb (0.3.901)
 
 Check if main version or subversion number has changed. 
@@ -14,21 +14,21 @@ If yes, please, update *.targets files located in binding
 projects, also, update Podfile files if needed.
 
 In Google.MobileAds binding project, you can find the .targets file of:
-* Google-Mobile-Ads-SDK (7.38.0)
+* Google-Mobile-Ads-SDK (7.41.0)
 
 and the Native Reference of:
 * PersonalizedAdConsent (1.0.3)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.5.0)
-* GoogleAppMeasurement (5.5.0)
+* FirebaseAnalytics (5.8.0)
+* GoogleAppMeasurement (5.8.0)
 
-In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.4.0)
+In Firebase.InstanceID binding project, you can find the Native Reference of:
+* FirebaseInstanceID (3.8.0)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.2.0)
-* GoogleUtilities (5.3.7)
+* FirebaseCore (5.4.0)
+* GoogleUtilities (5.5.0)
 * nanopb (0.3.901)
 =end
 
@@ -39,5 +39,5 @@ install! 'cocoapods', :integrate_targets => false
 use_frameworks!
 
 target 'FirebaseAdMob' do
-	pod 'Firebase/AdMob', '5.16.0'
+	pod 'Firebase/AdMob', '5.19.0'
 end 
