--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -4,6 +4,7 @@ If yes, please, update Podfile file if needed.
 
 In Firebase.Core binding project, you can find the Native Reference of:
 * Firebase (5.19.0)
+* FirebaseAnalyticsInterop (1.2.0)
 * FirebaseAuthInterop (1.0.0)
 * FirebaseCore (5.4.0)
 * GTMSessionFetcher (1.2.1)
@@ -42,6 +43,7 @@ $GTM_SESSION_FETCHER = '1.2.1'
 $PROTOBUF_VERSION = '3.6.1'
 $LEVELDB_LIBRARY_VERSION = '1.20.0'
 $FIREBASE_AUTH_INTEROP_VERSION = '1.0.0'
+$FIREBASE_ANALYTICS_INTEROP_VERSION = '1.2.0'
 
 target 'FirebaseCore' do
 	pod 'Firebase/CoreOnly', '5.19.0'
@@ -66,4 +68,5 @@ target 'FirebaseCore' do
 	pod 'Protobuf', $PROTOBUF_VERSION
 	pod 'leveldb-library', $LEVELDB_LIBRARY_VERSION
 	pod 'FirebaseAuthInterop', $FIREBASE_AUTH_INTEROP_VERSION
+	pod 'FirebaseAnalyticsInterop', $FIREBASE_ANALYTICS_INTEROP_VERSION
 end
