--- a/Firebase.DynamicLinks/externals/Podfile
+++ b/Firebase.DynamicLinks/externals/Podfile
@@ -1,39 +1,52 @@
 =begin
 Last run FirebaseDynamicLinks installed:
-* Firebase (5.8.1)
-* FirebaseAnalytics (5.1.4)
-* FirebaseCore (5.1.3)
-* FirebaseDynamicLinks (3.0.2)
-* FirebaseInstanceID (3.2.1)
-* GoogleAppMeasurement (5.1.4)
-* GoogleUtilities (5.3.0)
-* nanopb (0.3.8)
+* Firebase (5.19.0)
+* FirebaseAnalytics (5.8.0)
+* FirebaseCore (5.4.0)
+* FirebaseDynamicLinks (3.4.2)
+* FirebaseInstanceID (3.8.0)
+* GoogleAppMeasurement (5.8.0)
+* GoogleUtilities (5.5.0)
+* nanopb (0.3.901)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
-In Firebase.DynamicLinks binding project, you can find the .targets file of:
-* FirebaseDynamicLinks (3.0.2)
+In Firebase.DynamicLinks binding project, you can find the Native Reference of:
+* FirebaseDynamicLinks (3.4.2)
 
 In Firebase.Analytics binding project, you can find the .targets file of:
-* FirebaseAnalytics (5.1.4)
-* GoogleAppMeasurement (5.1.4)
+* FirebaseAnalytics (5.8.0)
+* GoogleAppMeasurement (5.8.0)
 
-In Firebase.InstanceID binding project, you can find the .targets file of:
-* FirebaseInstanceID (3.2.1)
+In Firebase.InstanceID binding project, you can find the Native Reference of:
+* FirebaseInstanceID (3.8.0)
 
 In Firebase.Core binding project, you can find the Native Reference of:
-* FirebaseCore (5.1.3)
-* GoogleUtilities (5.3.0)
-* nanopb (0.3.8)
+* FirebaseCore (5.4.0)
+* GoogleUtilities (5.5.0)
+* nanopb (0.3.901)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
 
 platform :ios, '8.0'
 install! 'cocoapods', :integrate_targets => false
+use_frameworks!
+
+=begin
+This override the static_framework flag to false,
+in order to be able to build dynamic frameworks.
+=end
+pre_install do |installer|
+	installer.pod_targets.each do |pod|
+		# workaround for https://github.com/CocoaPods/CocoaPods/issues/3289
+		Pod::Installer::Xcode::TargetValidator.send(:define_method, :verify_no_static_framework_transitive_dependencies) {}
+		def pod.static_framework?; false end
+	end
+end
 
 target 'FirebaseDynamicLinks' do
-	pod 'Firebase/DynamicLinks', '5.8.1'
+	pod 'Firebase/DynamicLinks', '5.19.0'
 end
