--- a/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
+++ b/Firebase.DynamicLinks/nuget/Xamarin.Firebase.iOS.DynamicLinks.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Xamarin.Firebase.iOS.DynamicLinks</id>
     <title>Firebase APIs Dynamic Links iOS Library</title>
-    <version>3.0.2.1</version>
+    <version>3.4.2.0</version>
     <authors>Microsoft</authors>
     <owners>Microsoft</owners>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
@@ -15,16 +15,14 @@
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
         <dependency id="Xamarin.Build.Download" version="0.4.11" />
-        <dependency id="Xamarin.Firebase.iOS.Analytics" version="5.1.4.1" />
-        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="3.2.1.0" />
-        <dependency id="Xamarin.Firebase.iOS.Core" version="5.1.3.0" />
+        <dependency id="Xamarin.Firebase.iOS.Analytics" version="5.8.0.0" />
+        <dependency id="Xamarin.Firebase.iOS.InstanceID" version="3.8.0.0" />
+        <dependency id="Xamarin.Firebase.iOS.Core" version="5.4.0.0" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <file src="output/Firebase.DynamicLinks.dll" target="lib/Xamarin.iOS10" />
-
-    <!-- Add targets file for external native reference download -->
-    <file src="source/Firebase.DynamicLinks/Firebase.DynamicLinks.targets" target="build/Xamarin.Firebase.iOS.DynamicLinks.targets" />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
