--- a/samples/Google/Maps/GoogleMapsSample/GoogleMapsSample.csproj
+++ b/samples/Google/Maps/GoogleMapsSample/GoogleMapsSample.csproj
@@ -107,15 +107,15 @@
     <Compile Include="AppDelegate.cs" />
     <Compile Include="MapViewController.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.Maps\Google.Maps.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\Maps\Maps.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <BundleResource Include="Default-568h%402x.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\source\Google.Maps\Google.Maps.csproj">
-      <Project>{EB77B0C1-AC2F-483C-8587-6F0FE5ECBE5B}</Project>
-      <Name>Google.Maps</Name>
+    <ProjectReference Include="..\..\..\..\source\Google\Maps\Maps.csproj">
+      <Project>{2D4887E5-F5E4-4C2B-9F35-EAE5E562E43B}</Project>
+      <Name>Maps</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
