--- a/samples/Firebase/CloudFirestore/CloudFirestoreSample/CloudFirestoreSample.csproj
+++ b/samples/Firebase/CloudFirestore/CloudFirestoreSample/CloudFirestoreSample.csproj
@@ -143,17 +143,17 @@
     <Compile Include="UIAlertHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Firebase.Auth\source\Firebase.Auth\Firebase.Auth.csproj">
-      <Project>{B6D38028-B1CF-4351-B53B-B5D35F19FC4A}</Project>
-      <Name>Firebase.Auth</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Auth\Auth.csproj">
+      <Project>{1BF6B7AD-47B3-49F5-918C-8E405309C934}</Project>
+      <Name>Auth</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\source\Firebase.CloudFirestore\Firebase.CloudFirestore.csproj">
-      <Project>{07B73E52-5385-4A06-BF48-8E27A4DF8D88}</Project>
-      <Name>Firebase.CloudFirestore</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\CloudFirestore\CloudFirestore.csproj">
+      <Project>{5AFBE3D9-C1FC-4E91-BF3C-AF280727E861}</Project>
+      <Name>CloudFirestore</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
-      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
-      <Name>Firebase.Core</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
+      <Project>{9335A59B-3B54-4ED5-8201-B68CFD05CAFB}</Project>
+      <Name>Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
