--- a/samples/Firebase/Invites/InvitesSample/InvitesSample.csproj
+++ b/samples/Firebase/Invites/InvitesSample/InvitesSample.csproj
@@ -126,39 +126,39 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
-      <Project>{87BB564C-85A8-4EC1-AD16-EC0A1ACCEE56}</Project>
-      <Name>Firebase.Analytics</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Analytics\Analytics.csproj">
+      <Project>{25783B8D-1423-4CC2-B629-7E7F36A1CF4B}</Project>
+      <Name>Analytics</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.DynamicLinks\source\Firebase.DynamicLinks\Firebase.DynamicLinks.csproj">
-      <Project>{44E2D44F-2072-4885-AA39-1C4DD5E65E5C}</Project>
-      <Name>Firebase.DynamicLinks</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
+      <Project>{9335A59B-3B54-4ED5-8201-B68CFD05CAFB}</Project>
+      <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\source\Firebase.Invites\Firebase.Invites.csproj">
-      <Project>{C3C2D432-6B50-4704-A14B-78547B871876}</Project>
-      <Name>Firebase.Invites</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\DynamicLinks\DynamicLinks.csproj">
+      <Project>{4D102D0B-59D7-4902-913E-85CAA0DFE8A3}</Project>
+      <Name>DynamicLinks</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\InstanceID\InstanceID.csproj">
+      <Project>{754D8F56-C3DB-4E33-91D5-45445AB286EF}</Project>
+      <Name>InstanceID</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Google.SignIn\source\Google.SignIn\Google.SignIn.csproj">
-      <Project>{3C142652-0DF6-4919-9F58-0FD8FA3A9F6D}</Project>
-      <Name>Google.SignIn</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Invites\Invites.csproj">
+      <Project>{DC921458-BFFC-4E59-B9FA-2F3EF8DB9023}</Project>
+      <Name>Invites</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
-      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
-      <Name>Firebase.Core</Name>
+    <ProjectReference Include="..\..\..\..\source\Google\SignIn\SignIn.csproj">
+      <Project>{CF20170E-821A-4706-BFCE-5650F3D1B3F0}</Project>
+      <Name>SignIn</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.DynamicLinks\source\Firebase.DynamicLinks\Firebase.DynamicLinks.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Google.SignIn\source\Google.SignIn\Google.SignIn.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Firebase.Invites\Firebase.Invites.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\InstanceID\InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Analytics\Analytics.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\DynamicLinks\DynamicLinks.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\SignIn\SignIn.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\Invites\Invites.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
 </Project>
