--- a/samples/Firebase/MLKit.ModelInterpreter/ModelInterpreterSample/ModelInterpreterSample.csproj
+++ b/samples/Firebase/MLKit.ModelInterpreter/ModelInterpreterSample/ModelInterpreterSample.csproj
@@ -123,26 +123,26 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
-      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
-      <Name>Firebase.Core</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
+      <Project>{9335A59B-3B54-4ED5-8201-B68CFD05CAFB}</Project>
+      <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.csproj">
-      <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
-      <Name>Firebase.InstanceID</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\InstanceID\InstanceID.csproj">
+      <Project>{754D8F56-C3DB-4E33-91D5-45445AB286EF}</Project>
+      <Name>InstanceID</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.MLKit.Common\source\Firebase.MLKit.Common\Firebase.MLKit.Common.csproj">
-      <Project>{43A3F6C8-A2D8-414E-8509-F824D0B3B838}</Project>
-      <Name>Firebase.MLKit.Common</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.csproj">
+      <Project>{90DDF7C4-5223-4863-9687-6211BC5D56E5}</Project>
+      <Name>MLKit.Common</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\source\Firebase.MLKit.ModelInterpreter\Firebase.MLKit.ModelInterpreter.csproj">
-      <Project>{7B90842E-729E-49A2-93FB-F1B29085EB88}</Project>
-      <Name>Firebase.MLKit.ModelInterpreter</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\MLKit.ModelInterpreter\MLKit.ModelInterpreter.csproj">
+      <Project>{108BC6F9-E830-4F3B-85A9-DF7A70A06396}</Project>
+      <Name>MLKit.ModelInterpreter</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.MLKit.Common\source\Firebase.MLKit.Common\Firebase.MLKit.Common.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Firebase.MLKit.ModelInterpreter\Firebase.MLKit.ModelInterpreter.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\InstanceID\InstanceID.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.Common\MLKit.Common.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Firebase\MLKit.ModelInterpreter\MLKit.ModelInterpreter.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
 </Project>
