--- a/samples/Google/Cast/CastSample/CastSample.csproj
+++ b/samples/Google/Cast/CastSample/CastSample.csproj
@@ -127,19 +127,19 @@
     <Compile Include="Models\ImageFetcher.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\source\Google.Cast\Google.Cast.csproj">
-      <Project>{2E11B34E-2811-45CC-90F3-428B9A88F86A}</Project>
-      <Name>Google.Cast</Name>
+    <ProjectReference Include="..\..\..\..\source\Firebase\Core\Core.csproj">
+      <Project>{9335A59B-3B54-4ED5-8201-B68CFD05CAFB}</Project>
+      <Name>Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.csproj">
-      <Project>{0AD1ED63-C008-41B3-8ADB-04696B4880E3}</Project>
-      <Name>Firebase.Core</Name>
+    <ProjectReference Include="..\..\..\..\source\Google\Cast\Cast.csproj">
+      <Project>{D71F8108-A163-4E1B-BFB5-EF58FEBADD33}</Project>
+      <Name>Cast</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\Videos.json" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.Cast\Google.Cast.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\Cast\Cast.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
 </Project>
