--- a/samples/Google/Places/GooglePlacesSample/GooglePlacesSample.csproj
+++ b/samples/Google/Places/GooglePlacesSample/GooglePlacesSample.csproj
@@ -136,20 +136,20 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Google.Maps\source\Google.Maps\Google.Maps.csproj">
-      <Project>{EB77B0C1-AC2F-483C-8587-6F0FE5ECBE5B}</Project>
-      <Name>Google.Maps</Name>
+    <ProjectReference Include="..\..\..\..\source\Google\Maps\Maps.csproj">
+      <Project>{2D4887E5-F5E4-4C2B-9F35-EAE5E562E43B}</Project>
+      <Name>Maps</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\source\Google.Places\Google.Places.csproj">
-      <Project>{ECA3E3DD-B609-44F5-990F-CCF22752E382}</Project>
-      <Name>Google.Places</Name>
+    <ProjectReference Include="..\..\..\..\source\Google\Places\Places.csproj">
+      <Project>{FC514AE9-BE75-467B-91CC-B5FFC0AFBEC4}</Project>
+      <Name>Places</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\thumbnail.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.Places\Google.Places.targets" />
-  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Google.Maps\source\Google.Maps\Google.Maps.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\Places\Places.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\source\Google\Maps\Maps.targets" />
   <Import Project="..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.11\build\Xamarin.Build.Download.targets')" />
 </Project>
